fix: Switch to CPU Spot instances to avoid quota limits
Backend:
- Change compute environment from On-Demand to Spot (TYPE: SPOT)
- BidPercentage: 100 to pay up to On-Demand price
- Update message: 'Spot instance, 3-5 min startup'
- Create new compute environment: iris-cpu-spot-compute-v3

Frontend:
- Update status message: 'Starting CPU Spot instance (3-5 min)...'
- Update logs: 'Using CPU Spot instances to avoid quota limits'
- Update timing: 48-65 minutes total

Using Spot instances because AWS is rejecting On-Demand quota increases.
Spot instances typically have quota available even when On-Demand is exhausted.

--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -226,17 +226,18 @@ Resources:
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
 
-  # Batch Compute Environment (CPU On-Demand - temporary while GPU quota pending)
-  BatchCPUComputeEnvironment:
+  # Batch Compute Environment (CPU Spot - using Spot to avoid On-Demand quota limits)
+  BatchCPUSpotComputeEnvironment:
     Type: AWS::Batch::ComputeEnvironment
     Properties:
-      ComputeEnvironmentName: iris-cpu-ondemand-compute-v2
+      ComputeEnvironmentName: iris-cpu-spot-compute-v3
       Type: MANAGED
       State: ENABLED
       ServiceRole: !GetAtt BatchServiceRole.Arn
       ComputeResources:
-        Type: EC2
-        AllocationStrategy: BEST_FIT_PROGRESSIVE
+        Type: SPOT
+        AllocationStrategy: SPOT_CAPACITY_OPTIMIZED
+        BidPercentage: 100
         MinvCpus: 0
         MaxvCpus: 16
         DesiredvCpus: 0
@@ -327,7 +328,7 @@ Resources:
       Priority: 1
       ComputeEnvironmentOrder:
         - Order: 1
-          ComputeEnvironment: !Ref BatchCPUComputeEnvironment
+          ComputeEnvironment: !Ref BatchCPUSpotComputeEnvironment
 
   # Batch Job Definition
   BatchJobDefinition:
