feat: Switch to c5.large (2 vCPUs) for minimal quota requirements
Backend:
- Change instance type to c5.large (2 vCPUs, 4 GB RAM)
- Create new compute environment: iris-cpu-spot-small-v4
- Update Job Definition to 2 vCPUs, 4096 MB memory
- Update timing estimates: 93-125 minutes total

Frontend:
- Update status message: 'processing on small CPU (90-120 min)'
- Update logs: 'Using small CPU Spot instance (c5.large) due to quota limits'

This minimal instance size should work within severely limited AWS quotas.
Performance will be slow but at least functional while waiting for quota approval.

Docs:
- Created AWS_SUPPORT_CASE_TEMPLATE.md with instructions to manually open support case

--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -226,11 +226,11 @@ Resources:
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
 
-  # Batch Compute Environment (CPU Spot - using Spot to avoid On-Demand quota limits)
-  BatchCPUSpotComputeEnvironment:
+  # Batch Compute Environment (CPU Spot Small - c5.large for minimal quota)
+  BatchCPUSpotSmallComputeEnvironment:
     Type: AWS::Batch::ComputeEnvironment
     Properties:
-      ComputeEnvironmentName: iris-cpu-spot-compute-v3
+      ComputeEnvironmentName: iris-cpu-spot-small-v4
       Type: MANAGED
       State: ENABLED
       ServiceRole: !GetAtt BatchServiceRole.Arn
@@ -242,7 +242,7 @@ Resources:
         MaxvCpus: 16
         DesiredvCpus: 0
         InstanceTypes:
-          - c5.2xlarge  # 8 vCPUs, 16 GB RAM - optimized for compute
+          - c5.large  # 2 vCPUs, 4 GB RAM - minimal quota requirement
         Subnets:
           - !Ref BatchSubnet
         SecurityGroupIds:
@@ -328,7 +328,7 @@ Resources:
       Priority: 1
       ComputeEnvironmentOrder:
         - Order: 1
-          ComputeEnvironment: !Ref BatchCPUSpotComputeEnvironment
+          ComputeEnvironment: !Ref BatchCPUSpotSmallComputeEnvironment
 
   # Batch Job Definition
   BatchJobDefinition:
@@ -340,8 +340,8 @@ Resources:
         - EC2
       ContainerProperties:
         Image: !Sub '${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${BatchECRRepository}:latest'
-        Vcpus: 8
-        Memory: 16384
+        Vcpus: 2
+        Memory: 4096
         ExecutionRoleArn: !GetAtt BatchTaskExecutionRole.Arn
         JobRoleArn: !GetAtt BatchInstanceRole.Arn
         Environment:
