--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "nifti-reader-js": "^0.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.9.6",
     "tailwind-merge": "^2.5.2",
     "three": "^0.168.0",
     "three-stdlib": "^2.32.2",
