--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.13.1",
+    "@itk-wasm/dicom": "^7.6.4",
+    "@itk-wasm/image-io": "^1.6.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-switch": "^1.1.1",
